ingress/cloudflare.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cloudflare-proxy
spec:
  plugin:
    cloudflare:
      trustedCIDRs: []
      overwriteRequestHeader: true
