ingress/flux-receivers.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-receivers
spec:
  parentRefs:
    - name: cloudflare
  hostnames:
    - "flux-receiver.schlaubi.net"
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: cloudflare
