ingress/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: whoami
spec:
  parentRefs:
    - name: cloudflare
  hostnames:
    - "whoami.schlau.bi"
  rules:
    - backendRefs:
        - name: cloudflare
          port: 80
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: cloudflare
